# cpp-modules-example

./: CMakeLists.txt  README.md
include/main-program/: main.hpp
include/module-1/: mod1.hpp
include/module-2/: mod2.hpp
include/module-3/: mod3.hpp
include/shared/: interface.hpp
src/main-program/: main.cpp
src/module-1/: mod1.cpp
src/module-2/: mod2.cpp
src/module-3/: mod3.cpp
